--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "@graphql-codegen/cli": "^2.2.1",
     "@graphql-codegen/typescript": "^2.2.4",
     "@graphql-codegen/typescript-operations": "^2.1.8",
-    "@netlify/plugin-gatsby": "^2.0.0-beta",
+    "@netlify/plugin-gatsby": "^3.4.8",
     "@testing-library/cypress": "^8.0.0",
     "@types/cypress": "^1.1.3",
     "@types/decimal.js": "^7.4.0",
